# gst-in-action

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake
cmake/modules/: AddGStreamer.cmake  EnableCcache.cmake
doc/: debug.md  tools.md
doc/pipelines/: basics.md  files.md  images.md  mixing.md  network.md  queues.md  rtmp.md  rtp.md  sharing.md  splitting.md  srt.md  tcp-receive.html
src/: CMakeLists.txt
src/basic01/: CMakeLists.txt  basic01.cpp
src/basic02/: CMakeLists.txt
src/basic03/: CMakeLists.txt
src/basic04/: basic04.cpp
src/basic05/: basic05.cpp
src/basic06/: CMakeLists.txt
src/basic07/: basic07.cpp
src/basic09/: basic09.cpp
src/basic10/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: Utils.hpp
src/common/src/: Utils.cpp
src/examples/: CMakeLists.txt
src/examples/basic00/: CMakeLists.txt  basic00.cpp
src/examples/basic01/: CMakeLists.txt  basic01.cpp
src/examples/basic02/: CMakeLists.txt  basic02.cpp
src/examples/basic03/: CMakeLists.txt  basic03.cpp
src/examples/basic04/: CMakeLists.txt  basic04.cpp
src/examples/basic05/: CMakeLists.txt  basic05.cpp
src/examples/basic06/: CMakeLists.txt  basic06.cpp
src/examples/basic07/: CMakeLists.txt  basic07.cpp
src/examples/basic08/: CMakeLists.txt  basic08.cpp
src/examples/basic09/: CMakeLists.txt  basic09.cpp
src/examples/basic10/: CMakeLists.txt  basic10.cpp
src/examples/basic11/: CMakeLists.txt  basic11.cpp
src/examples/basic12/: Basic12.cpp  CMakeLists.txt  CustomRtPool.cpp  CustomRtPool.hpp
src/examples/basic13/: Basic13.cpp  CMakeLists.txt
src/examples/basic14/: Basic14.cpp  CMakeLists.txt
src/examples/basic15/: Basic15.cpp  CMakeLists.txt
src/examples/basic16/: Basic16.cpp  CMakeLists.txt
src/examples/basic17/: Basic17.cpp  CMakeLists.txt
src/examples/basic18/: Basic18.cpp  CMakeLists.txt
