add_subdirectory(basic00)
add_subdirectory(basic01)
add_subdirectory(basic02)
add_subdirectory(basic03)
add_subdirectory(basic04)
add_subdirectory(basic05)
add_subdirectory(basic06)
add_subdirectory(basic07)
add_subdirectory(basic08)
add_subdirectory(basic09)
add_subdirectory(basic10)
add_subdirectory(basic11)
add_subdirectory(basic12)
add_subdirectory(basic13)
add_subdirectory(basic14)
add_subdirectory(basic15)
add_subdirectory(basic16)
add_subdirectory(basic17)
