# Copyright 2025 Denys Asauliak
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(basic00)
add_subdirectory(basic01)
add_subdirectory(basic02)
add_subdirectory(basic03)
add_subdirectory(basic04)
add_subdirectory(basic05)
add_subdirectory(basic06)
add_subdirectory(basic07)
add_subdirectory(basic08)
add_subdirectory(basic09)
add_subdirectory(basic10)
add_subdirectory(basic11)
add_subdirectory(basic12)
add_subdirectory(basic13)
add_subdirectory(basic14)
add_subdirectory(basic15)
add_subdirectory(basic16)
add_subdirectory(basic17)
add_subdirectory(basic18)
